--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    border: 3px double #000080;
+    border-width: thick;
 }
 
 .container {
@@ -50,12 +52,15 @@
 }
 
 
-body 
-{
+body {
     background-color: whitesmoke;
 }
 
 @media (min-width:320px) {
+
+    .container>p {
+       font-size: 13px;
+    }
 
     .allcontainer {
         margin-left: auto;
@@ -66,13 +71,15 @@ body
 
     #first-password,
     #second-password {
-        width: 50%;
+        width: 60%;
     }
 
 }
 
 @media (min-width:481px) {
-
+    .container>p {
+        font-size: 1rem;
+    }
 
     #first-password,
     #second-password {
@@ -117,7 +124,7 @@ body
 
     #first-password,
     #second-password {
-        width: 20%;
+        width: 30%;
     }
 }
 
